@@ -1,5 +1,13 @@
 2017-11-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* coders/bmp.c (DecodeImage): "Right-size" and "Right-type"
+	DecodeImage() variables and check for EOF at every point of the
+	way.  Pass buffer size as an argument.
+
+	* coders/dib.c (DecodeImage): "Right-size" and "Right-type"
+	DecodeImage() variables and check for EOF at every point of the
+	way.  Pass buffer size as an argument.
+
 	* coders/bmp.c (_BMPInfo): "Right-size" BMPInfo members.  The
 	'long' type is promoted to 64-bit on LP64 systems and the large
 	size is not needed.
